ks8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
  - port: 80
    targetPort: 5000
