ks8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: flask.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-clusterip
            port: 
              number: 80
